--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "sqlite3": "^5.1.6",
     "vue": "^3.3.11",
     "vuex": "^4.1.0"
